[package]
name = "speak-easy"
version = "0.1.0"
authors = ["DragonWraithus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = "0.4.2"
tera = "0.11.20"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features =false
features = ["handlebars_templates", "tera_templates", "serve"]

[dependencies.diesel] 
version = "1.4.2"
features = ["postgres"]